# CirDeVec

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
cmake/: buildBenchmark.cmake  buildExample.cmake  buildTests.cmake
docs/: IMPLEMENTATION.md  INCLUSION.md  INTEGRATIONS.md
include/CirDeVec/: CirDeVec.hpp  ConstexprDSUtils.hpp
scripts/: downloadTestDependencies.sh  installTestDependencies.sh
tests/: bench.cpp  example.cpp  main.cpp
